# browserstavk_mobile_testing

./: .env  .gitignore  pyproject.toml
browserstavk_mobile_testing/helpers/: attach.py
tests/: conftest.py
tests/android/: wiki_test.py
